--- a/bbl/i18n/list.txt
+++ b/bbl/i18n/list.txt
@@ -42,6 +42,7 @@ src/slic3r/GUI/Jobs/SendJob.cpp
 src/slic3r/GUI/Jobs/UpgradeNetworkJob.cpp
 src/slic3r/GUI/AboutDialog.cpp
 src/slic3r/GUI/AMSMaterialsSetting.cpp
+src/slic3r/GUI/ExtrusionCalibration.cpp
 src/slic3r/GUI/AMSMappingPopup.cpp
 src/slic3r/GUI/AMSSetting.cpp
 src/slic3r/GUI/BBLTopbar.cpp
